--- a/English.lproj/HistoryView.xib
+++ b/English.lproj/HistoryView.xib
@@ -3191,7 +3191,7 @@
 						<string key="mainMenuRebaseChangesets:">id</string>
 						<string key="mainMenuRevertAllFiles:">id</string>
 						<string key="mainMenuStripChangesets:">id</string>
-						<string key="openHistoryView:">id</string>
+						<string key="prepareToOpenHistoryView:">id</string>
 						<string key="refreshHistoryView:">id</string>
 						<string key="toolbarCommitFiles:">id</string>
 						<string key="toolbarDiffFiles:">id</string>
@@ -3274,8 +3274,8 @@
 							<string key="name">mainMenuStripChangesets:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="openHistoryView:">
-							<string key="name">openHistoryView:</string>
+						<object class="IBActionInfo" key="prepareToOpenHistoryView:">
+							<string key="name">prepareToOpenHistoryView:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="refreshHistoryView:">
