--- a/English.lproj/MyDocument.xib
+++ b/English.lproj/MyDocument.xib
@@ -884,7 +884,7 @@
                                     </object>
                                   </object>
                                   <double key="NSRowHeight">17</double>
-                                  <int key="NSTvFlags">-767557632</int>
+                                  <int key="NSTvFlags">-633339904</int>
                                   <reference key="NSDelegate"/>
                                   <reference key="NSDataSource"/>
                                   <int key="NSColumnAutoresizingStyle">4</int>
@@ -5162,6 +5162,10 @@
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">NSObject</string>
+          <reference key="sourceIdentifier" ref="1010491287"/>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSResponder</string>
           <reference key="sourceIdentifier" ref="1010491287"/>
         </object>
         <object class="IBPartialClassDescription">
